@@ -24,12 +24,18 @@ static isc_once_t		msgcat_once = ISC_ONCE_INIT;
 
 static const char *text[PK11_R_NRESULTS] = {
 	"PKCS#11 initialization failed",		/*%< 0 */
-	"no PKCS#11 provider"
+	"no PKCS#11 provider",				/*%< 1 */
+	"PKCS#11 no random service",			/*%< 2 */
+	"PKCS#11 no digist service",			/*%< 3 */
+	"PKCS#11 no AES service",			/*%< 4 */
 };
 
 static const char *ids[PK11_R_NRESULTS] = {
 	"PK11_R_INITFAILED",
-	"PK11_R_NOPROVIDER"
+	"PK11_R_NOPROVIDER",
+	"PK11_R_NORANDOMSERVICE",
+	"PK11_R_NODIGESTSERVICE",
+	"PK11_R_NOAESSERVICE",
 };
 
 #define PK11_RESULT_RESULTSET			2
