@@ -3209,6 +3209,7 @@
 ./lib/dns/tests/rdataset_test.c			C	2012,2016,2018
 ./lib/dns/tests/rdatasetstats_test.c		C	2012,2015,2016,2018
 ./lib/dns/tests/resolver_test.c			C	2018
+./lib/dns/tests/result_test.c			C	2018
 ./lib/dns/tests/rsa_test.c			C	2016,2018
 ./lib/dns/tests/sigs_test.c			C	2018
 ./lib/dns/tests/testdata/db/data.db		ZONE	2018
@@ -3652,6 +3653,7 @@
 ./lib/isccc/result.c				C.NOM	2001,2003,2004,2005,2007,2015,2016,2018
 ./lib/isccc/sexpr.c				C.NOM	2001,2004,2005,2007,2014,2015,2016,2018
 ./lib/isccc/symtab.c				C.NOM	2001,2004,2005,2007,2016,2018
+./lib/isccc/tests/result_test.c			C	2018
 ./lib/isccc/version.c				C	1998,1999,2000,2001,2004,2005,2007,2016,2018
 ./lib/isccc/win32/DLLMain.c			C	2001,2004,2007,2016,2018
 ./lib/isccc/win32/libisccc.def			X	2001,2016,2018
